i hav done the remaning parts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="div1">
         hiii
     </div>
+    <div class="para">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto quo nisi explicabo cumque officiis expedita numquam aperiam exercitationem impedit voluptates? Nobis sit mollitia possimus eveniet iusto? Recusandae labore sequi cum.</p>
+    </div>
     
 </body>
 </html>
